--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,6 @@
 <html lang="ja">
 	<head>
+		<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
 		<meta charset="UTF-8">
 		<title>AOMORIYA</title>
 		<link rel="stylesheet" type="text/css" href="css/demo.css">
