APIサーバーにPOSTし、レスポンスを受け取る

--- a/index.html
+++ b/index.html
@@ -1,79 +1,50 @@
-!DOCTYPE html
 <html lang="ja">
+	<head>
+		<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
+		<meta charset="UTF-8">
+		<title>AOMORIYA</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
+	</head>
+	<body>
+		<div id="header">
+			<a class="title">~青森屋~</a>
+		</div>
+		<div id="center">
+			<div class="content">
+				<h1>青森屋 思い出</h1>
+			</div>
+			<div id="single">
+				<div id="pic">
+					<img src="https://booking.hoshinoresort.com/upload/0000000101/images_u/room/azumasi1.jpg" alt="青森屋の部屋　テスト" class="test1"
+					align="left">
+				</div>
+				<div id="text">
+					<p class="test2">これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。</p>
+				</div>
+				<div class="clear"></div>
 
-  <head>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/script.js"></script>
-    <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
 
-   <title>AOMORIYA</title>
-  </head>
+							<div id="single">
+				<div id="pic">
+					<img src="https://booking.hoshinoresort.com/upload/0000000101/images_u/room/azumasi1.jpg" alt="青森屋の部屋　テスト" class="test1" align="left">
+				</div>
+				<div id="text">
+					<p class="test2">これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。</p>
+				</div>
+				<div class="clear"></div>
 
-  <body class="controller">
 
-    <header style="background-color:black">_</header>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-4" style="background-color:black;">_</div>
-          <div class="col-sm-4" style="background-color:black;">_</div>
-          <div class="col-sm-4" style="background-color:black;">_</div>
-        </div>
-      </div>
-    <footer style="background-color:black">_</footer>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand-center" href="index.html">〜青森屋〜</a>
-        </div>
-
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <h1>青森屋　思い出</h1>
-
-    <img src="https://booking.hoshinoresort.com/upload/0000000101/images_u/room/azumasi1.jpg" alt="青森屋の部屋　テスト" id="test1"/>
-
-    <script>
-    /*
-    $.getJSON("notes.json", function (spots) {
-        var i;
-        var isObject = function(o) {
-            return (o instanceof Object && !(o instanceof Array)) ? true : false;
-        };
-        for(i=0; i<spots.length;i++){
-            var obj = spots[i];
-            var key01;
-            var dataArray;
-            var j;
-            j=0;
-            for(key01 in obj){
-                if (!isObject(obj[key01])){
-                } else {
-                    var key02;
-                    dataArray = [];
-                    for( key02 in obj[key01]){
-                        dataArray.push(obj[key01][key02]);
-                    }
-                    formatData[i][j] = dataArray;
-                    j++;
-                }
-            }
-        }
-    });
-    */
-    </script>
-  </body>
+							<div id="single">
+				<div id="pic">
+					<img src="https://booking.hoshinoresort.com/upload/0000000101/images_u/room/azumasi1.jpg" alt="青森屋の部屋　テスト" class="test1" align="left">
+				</div>
+				<div id="text">
+					<p class="test2">これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。これはテストです。</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+	</body>
 </html>
